shelter/src/style/components/_burger.scss
.burger {
  position: relative;
  width: 30px;
  height: 30px;
  align-items: center;
  background-color: transparent;
  outline: none;
  border: none;
  display: none;
  z-index: 5;
  transition: all linear .3s;

  &_active {
    transform: rotate(-90deg);
  }
  
  &::after,
  &::before {
    content: '';
    position: absolute;
    left: 0;
    height: 2px;
    width: 100%;
    height: 2px;
    background-color: $color-primary;
  }

  &::after {
    top: 15%;
  }

  &::before {
    bottom: 15%;
  }

  span {
    display: inline-block;
    width: 100%;
    height: 2px;
    background-color: $color-primary;
  }

  @media (max-width: 710px) {
    display: flex;
  }
  
}

.burger-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(41, 41, 41, 0.6);
}

.burger-menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
  position: fixed;
  top: 0;
  right: -100%;
  width: 100%;
  height: 100%;
  max-width: 320px;
  padding-top: 248px;
  background-color: $color-dark-buttons;
  transition: all linear .3s;
}

.burger-menu__link {
  font-family: 'Arial';
  font-style: normal;
  font-weight: 400;
  font-size: 3.2rem;
  line-height: 160%;
  color: $color-grey;
}

.burger-menu__link_active {
  color: #FAFAFA;
  position: relative;
  border-bottom: 3px solid $color-primary;
  padding-bottom: 5px;
}

.burger-menu_active {
  right: 0;
}

